# sot-tiago

./: .git-blame-ignore-revs  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
doc/: Doxyfile.extra.in
doc/main-page/: 01_bionic-install-simulation.hh  01_xenial-install-simulation.hh  02_bionic-run-simulation.hh  02_xenial-run-simulation.hh  03_bionic-install-robot.hh  03_xenial-install-robot.hh  04_bionic-run-experiment-robot.hh  04_xenial-run-experiment-robot.hh  05_bionic_source_build_sot_hpp_agimus.hh  05_xenial_source_build_sot_hpp_agimus.hh  main.hh  xenial-install-robot.hh  xenial-install-simulation.hh  xenial-run-simulation.hh
doc/vcs-files/: agimus.repos  hpp.repos  sot_tiago.repos
src/: CMakeLists.txt  device-python.cc  device-python.hh  diff_drive_controller-python-module.cc  diff_drive_controller.cpp  diff_drive_controller.h  holonomic-projection.cc  holonomic-projection.h  odometry.cpp  odometry.h  sot-tiago-controller.cpp  sot-tiago-controller.hh  sot-tiago-device.cpp  sot-tiago-device.hh  sot-tiago-steel-controller.cpp  sot-tiago-steel-controller.hh  speed_limiter.cpp  speed_limiter.h
src/dynamic_graph/sot/tiago/: __init__.py  robot.py  tiago.py
src/dynamic_graph/sot/tiago/steel/: prologue.py  robot.py  seqplay.py
test_long/: appli.py  test.py
tests/: appli.py  constraint.py  odometry.py  sot_keep.py  stop-controllers.py  test.py
